Fix gap between items

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -20,6 +20,10 @@ $component-margin: 4rem;
 $normal-padding: 0.5rem;
 $normal-border-radius: 0.5rem;
 
+// gap
+
+$flex-col-gap: 5rem;
+
 // fonts
 
 // headings
